--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,4 +7,4 @@ Author: Sebastian Kranz
 Maintainer: Sebastian Kranz <sebastian.kranz@uni-ulm.com>
 Description: Tools to work with AMPL from R. Writing AMPL dat files, running AMPL locally or using the NEOS solvers.
 License: GPL (>= 2)
-Depends: stringr, rgmpl, rneos, data.table
+Depends: stringr, rgmpl, rneos, data.table, restorepoint
